[package]
name = "ipc-orchestrator"
version = "0.3.3"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Orchestion of command line processes for local dev usage with IPC communication"
repository = "https://github.com/dunnock/orchestrator/"
documentation = "https://docs.rs/ipc-orchestrator"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["process", "rt-core", "blocking", "io-util"] }
ipc-channel = "0.13"
log = "0.4"
futures = "0.3"
anyhow = "1"
serde = { version="1", features=["derive"] }
serde_bytes = "0.11"
async-trait = "0.1"
crossbeam = "0.7"

[dev-dependencies]
rand = "0.7"
tokio = { version="0.2", features=["macros"] }
pretty_env_logger = "0.3"
